# libzmtp

./: .gitignore  CMakeLists.txt
include/: zmtp.h  zmtp_classes.h  zmtp_msg.h  zmtp_udp_endpoint.h  zmtp_util.h  zmtpconf.h  zmtpinc.h  zmtpnet.h  zmtpport.h
src/: zmtp.c  zmtp_channel.c  zmtp_classes.h  zmtp_msg.c  zmtp_util.h  zmtpnet.c  zmtpnet.h
test/: zmtp_selftest.c
